# rsudp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  c_liveness.diff  c_plots.diff  config.example.yaml  config.schema  config.yaml  healthz.diff  plot_font.diff  plot_meta.diff  plot_style.diff  plot_timezone.diff  pyproject.toml
.github/workflows/: test.yaml
doc/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  app.css  types.ts
frontend/src/components/: DateSelector.tsx  FileList.tsx  Footer.tsx  Icon.tsx  ImageViewer.tsx  SignalFilter.tsx  StatisticsPage.tsx
frontend/src/hooks/: useAutoRefresh.ts
frontend/src/utils/: constants.ts  dateTime.ts
patch/: c_alert_meta.diff  c_liveness.diff  c_plots.diff  helpers_meta.diff  p_producer_meta.diff  plot_meta.diff  plot_style.diff  plot_timezone.diff
react/: index.html  package-lock.json  package.json  vite.config.ts
react/src/: App.tsx  api.ts  index.css  types.ts
react/src/components/: DateSelector.tsx  FileList.tsx  Footer.tsx  ImageViewer.tsx  STAFilter.tsx  SignalFilter.tsx
react/src/hooks/: useScreenshotNavigation.ts
schema/: config.schema  sqlite.schema
src/: cleaner.py  healthz.py  webui.py
src/rsudp/: __init__.py  __main__.py  compress.py  config.py  monitor.py  schema_util.py  screenshot_manager.py  types.py
src/rsudp/cli/: __init__.py  cleaner.py  compress.py  healthz.py  webui.py
src/rsudp/quake/: __init__.py  crawl.py  database.py
src/rsudp/webui/: __init__.py
src/rsudp/webui/api/: __init__.py  schemas.py  screenshot_manager.py  statistics.py  viewer.py
tests/: conftest.py  helpers.py  test_api_schema_consistency.py
tests/e2e/: __init__.py  conftest.py  test_webui.py
tests/evidence/: index.htm
tests/integration/: test_webui.py
tests/unit/: test_cleaner.py  test_compress.py  test_healthz.py  test_monitor.py  test_quake_crawl.py  test_quake_database.py  test_screenshot_manager.py  test_timezone.py  test_types.py  test_viewer_api.py  test_webui.py
